# yc-qb-web-connector

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: index.py
config/: companies.yaml
docs/: DEPLOY_COMMANDS.md  PII_POLICY.md  REMEDIATION_2026-04-30.md  bills-workflow-question-yen-sandy.md  qbxml-entities.md  setup-guide.md  sync-strategy.md  unattended-mode-setup.md
migrations/: 001_qb_meta.sql  002_company_schema_template.sql  003_yc_works_schema.sql  004_add_assembly_bom_lines.sql  005_item_receipts.sql  006_add_lot_serial_numbers.sql  007_write_queue.sql  008_write_queue_is_pending.sql  009_write_queue_cascade.sql  010_backfill_jobs.sql  011_expenses_unified_view.sql  012_company_identity_check.sql  013_payroll_extraction.sql
scripts/: bootstrap_schemas.py  generate_qwc.py
src/: main.py  main.py.test
src/qbxml/: builders.py  entities.py  parsers.py
src/soap/: service.py  session.py
src/supabase/: client.py  upsert.py
src/sync/: backfill.py  coordinator.py  identity.py  state.py  write_queue.py
src/utils/: config.py  logging.py
tests/: test_build_assembly.py  test_build_assembly_del.py  test_builders.py  test_cascade_deps.py  test_config.py  test_parsers.py  test_session.py
